fixed alignment on modals

--- a/css/main.css
+++ b/css/main.css
@@ -244,7 +244,7 @@ body {
 /* Large Devices */
 @media only screen and (min-width: 992px) {
     .col-lg-6 {
-        width: 45%;
+        width: 49%;
     }
     .col-lg-12 {
         width: 100%;
